--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li class="small" style="background-image: url(assets/img/food.jpeg);"></li>
       <li class="large" style="background-image: url(assets/img/setup.jpg);"></li>
       <li class="large" style="background-image: url(assets/img/cupcakes.jpeg);"></li>
-      <li class="small" style="background-image: url(assets/img/table.jpeg);"></li>b nn
+      <li class="small" style="background-image: url(assets/img/table.jpeg);"></li>
     </ul>
   </section>
 
@@ -78,9 +78,9 @@
     <h3 class="title">Testimonials from our customers:</h3>
     <hr>
     <p class="quote">When my oldest graduated high school I decided that I wanted to focus on the guests not the food. Mariah did a fabulous job combining her creative food talents with our requests. Highly recommend her and her cupcakes!!! Craving one now just typing this!</p>
-    <p class="author">- Colt Steele</p>
+    <p class="author">- Lucy Johnson</p>
     <p class="quote">My husband and I were very pleased with the catering at our wedding. Professional and great food. plenty to go around.</p>
-    <p class="author">- Elie Schoppik</p>
+    <p class="author">- Kara Fields</p>
   </section>
 
   <section class="contact">
