--- a/Event.html
+++ b/Event.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Forked from a template on Tutorialzine: https://tutorialzine.com/2016/06/freebie-landing-page-template-with-flexbox -->
   <header>
-    <h2><a href="#">Social Sunflower</a></h2>
+    <h2><a href="#">Raahat</a></h2>
     <nav>
       <li><a href="#">Event Planning</a></li>
       <li><a href="#">Catering</a></li>
@@ -22,7 +22,7 @@
     </nav>
   </header>
   <section class="hero">
-    <div class="background-image" style="background-image: url(assets/img/prep.jpg);"></div>
+    <div class="background-image" style="background-image: url('https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.careinkent.co.uk%2Fuploads%2FDWS8y90L%2Fgrandpaniece_wide-b2e4518864bbb0a17efd93242519344234368ee3.jpg&imgrefurl=https%3A%2F%2Fwww.careinkent.co.uk%2Fb%2Fcaring-for-elderly-parents&tbnid=H_R0TkoOlOm0XM&vet=12ahUKEwj12a2B9PHuAhXHsksFHZPgDHEQMygBegUIARCYAQ..i&docid=l1BqHut_2AnPOM&w=826&h=465&q=elderly%20people%20with%20children%20wallpaper&ved=2ahUKEwj12a2B9PHuAhXHsksFHZPgDHEQMygBegUIARCYAQ');"></div>
     <div class="hero-content-area">
       <h1>Event Planning</h1>
     </div>
